--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
-    <string name="app_name">Informacioni sistemi za pracenje stanja pacijenata obolelih od Covid-19</string>
+    <string name="app_name">Informacioni sistemi za praćenje stanja pacijenata obolelih od Covid-19</string>
 
-    <string name="search">Pretrazi pacijenta</string>
+    <string name="search">Pretraži pacijenta</string>
 
 
     // login activity
@@ -25,16 +25,16 @@
 
     // state fragment
     <string name="stateTitle"> "Pregled brojnog stanja pacijenata"</string>
-    <string name="stateWaiting">Broj pacijenata u cekaonici:</string>
+    <string name="stateWaiting">Broj pacijenata u čekaonici:</string>
     <string name="stateHospitalised">Broj hospitalizovanih pacijenata:</string>
-    <string name="stateReleased">Broj otpustenih pacijenata</string>
+    <string name="stateReleased">Broj otpuštenih pacijenata</string>
 
     //new patient
     <string name="newpatientTitle">Unos novog pacijenta</string>
     <string name="namePh">Unesite ime</string>
     <string name="lastnamePh">Unesite prezime</string>
-    <string name="conditionsPh">Unesite simptome i opisite stanje pacijenta</string>
-    <string name="newpatientBtn">Dodaj u cekaonicu</string>
+    <string name="conditionsPh">Unesite simptome i opišite stanje pacijenta</string>
+    <string name="newpatientBtn">Dodaj u čekaonicu</string>
 
     <string name="errorEmpty">Moraju biti popunjena sva polja!</string>
     <string name="successMsg">Pacijent dodat.</string>
@@ -42,10 +42,13 @@
     // waiting list
     <string name="healthyBtn">Zdrav</string>
     <string name="hospBtn">Hospitalizacija</string>
+    <string name="healthyInfo">Zdrav i uklonjen.</string>
+    <string name="hospInfo">Hospitalizovan</string>
 
     // hospitalisation list
     <string name="patientState">Karton</string>
     <string name="releaseBtn">Otpust</string>
+    <string name="releasedInfo">Pacijent je ozdravio i otpušten je!</string>
 
     // profile
     <string name="profilTitle">Podaci o zdravstvenom radniku</string>
@@ -56,13 +59,13 @@
     <string name="profilLogoutBtn">Odjava</string>
 
     //edit profile
-    <string name="save">Sacuvaj</string>
+    <string name="save">Sačuvaj</string>
     <string name="discard">Odustani</string>
 
     // tab menu
-    <string name="wait">Cekaonica</string>
+    <string name="wait">Čekaonica</string>
     <string name="hosp">Hospitalizovani</string>
-    <string name="released">Otpusteni</string>
+    <string name="released">Otpušteni</string>
 
     // edit patient
     <string name="editPatientTitle">Karton pacijenta</string>
@@ -71,4 +74,9 @@
     <string name="editPatientDate">Datum prijema:</string>
     <string name="editPatientDiscard">Odustani</string>
     <string name="editPatientSave">Izmeni</string>
+
+    //errors nad info
+    <string name="allPropertyFullErr">Sva polja moraju biti popunjena.</string>
+    <string name="savingSuccess">Čuvanje uspelo.</string>
+
 </resources>
